# sensor_client

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  sensor_client.cpp  tests.h
src/sensor_client/: CMakeLists.txt  connection_metadata.h  sensor_client.cpp  sensor_client.h  websocket_endpoint.h
